files/envoy/envoy_config.json
{
  "listeners": [
    {
      "address": "tcp://0.0.0.0:80",
      "filters": [
        {
          "type": "read",
          "name": "http_connection_manager",
          "config": {
            "codec_type": "auto",
            "stat_prefix": "ingress_http",
            "route_config": {
              "virtual_hosts": [
                {
                  "name": "local_service",
                  "domains": ["*"],
                  "routes": [
                    {
                      "timeout_ms": 0,
                      "prefix": "/",
                      "cluster": "local_service"
                    }
                  ]
                }
              ]
            },
            "filters": [
                {   "name": "health_check",
                    "config": {
                        "pass_through_mode": true, "cache_time_ms": 2500, "endpoint": "/healthcheck"
                    }
                },
                {"name": "router","config": {}}
            ]
          }
        }
      ]
    },
    {
      "address": "tcp://0.0.0.0:9001",
      "filters": [
        {
          "type": "read",
          "name": "http_connection_manager",
          "config": {
            "codec_type": "auto",
            "stat_prefix": "egress_http",
            "add_user_agent": true,
            "idle_timeout_s": 840,
            "use_remote_address": true,
            "route_config": {
              "virtual_hosts": [
                {
                  "name": "egress_bookapp",
                  "domains": ["bookapp"],
                  "routes": [
                    {
                      "prefix": "/",
                      "retry_policy": {
                        "retry_on": "connect-failure"
                      },
                      "cluster": "egress_bookapp"
                    }
                  ]
                },
                {
                  "name": "egress_rentapp",
                  "domains": ["rentapp"],
                  "routes": [
                    {
                      "prefix": "/",
                      "retry_policy": {
                        "retry_on": "connect-failure"
                      },
                      "cluster": "egress_rentapp"
                    }
                  ]
                }
              ]
            },
            "filters": [
                {   "name": "rate_limit",
                    "config": {
                        "domain": "envoy_service_to_service"
                    }
                },
                {"name": "grpc_http1_bridge", "config": {}},
                {"name": "router", "config": {}}
            ]
          }
        }
      ]
    }
  ],
  "admin": {
    "access_log_path": "/dev/null",
    "address": "tcp://0.0.0.0:8001"
  },
  "statsd_udp_ip_address": "0.0.0.0:9125",
  "cluster_manager": {
    "clusters": [
      {
        "name": "local_service",
        "connect_timeout_ms": 800,
        "type": "static",
        "lb_type": "round_robin",
        "hosts": [{"url": "tcp://0.0.0.0:9000"}]
      },
      {
        "name": "egress_bookapp",
        "connect_timeout_ms": 800,
        "type": "strict_dns",
        "lb_type": "round_robin",
        "hosts": [{"url": "tcp://bookapp:80"}]
      },
      {
        "name": "egress_rentapp",
        "connect_timeout_ms": 800,
        "type": "strict_dns",
        "lb_type": "round_robin",
        "hosts": [{"url": "tcp://rentapp:80"}]
      }
    ]
  }
}
